# expert_core

./: .gitignore  .pdm.toml  PKG-INFO  README.md  pyproject.toml
avatar_core/: auth.py
avatar_core/models/: __init__.py  base.py
avatar_core/models/attachment/: __init__.py  attachment.py
avatar_core/models/avatar/: __init__.py  advice.py
avatar_core/models/calendar/: __init__.py  event.py  event_attachment.py  event_user.py  task.py  task_attachment.py  task_user.py
avatar_core/models/diary/: __init__.py  note.py  note_attachment.py  note_user.py
avatar_core/models/messenger/: __init__.py  chat.py  chat_user.py  message.py  message_advice.py  message_attachment.py
avatar_core/models/news/: __init__.py  news.py  news_attachment.py  news_tag.py  news_user.py  tag.py
avatar_core/models/organization/: __init__.py  organization.py  organization_user.py
avatar_core/models/subscription/: __init__.py  subscription.py
avatar_core/models/user/: __init__.py  user.py  user_integrations.py  user_settings.py
avatar_core/models/workspace/: __init__.py  workspace.py  workspace_attachment.py  workspace_item_user.py  workspace_user.py
avatar_core/plugins/: __init__.py
avatar_core/plugins/base/: plugin.py  settings.py
avatar_core/plugins/keycloak/: __init__.py  plugin.py
avatar_core/plugins/mongo/: __init__.py  plugin.py  settings.py
avatar_core/plugins/postgres/: __init__.py  plugin.py
avatar_core/plugins/rabbitmq/: __init__.py  plugin.py
avatar_core/schemes/: __init__.py  attachment.py  content.py  user.py
expert_core/: auth.py
expert_core/plugins/: __init__.py
(+16 files in other folders)
